--- a/internal/certauth/views/4_request_certificate_consent.hbs
+++ b/internal/certauth/views/4_request_certificate_consent.hbs
@@ -1,85 +1,80 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>Consent Required</title>
-    {{template "partials/fomantic"}}
-</head>
+{{template "partials/preamble"}}
 
 <body>
-    <div class="ui main text container">
-        <div class="ui raised padded segment">
-            <h1 class="ui header">
-                <i class="shield alternate icon"></i>
-                <div class="content">
-                    Consent Required
-                    <div class="sub header">Certificate Information Access Request</div>
+    {{template "partials/logobar"}}
+
+    <div class="ui hidden divider"></div>
+
+    <div class="ui container" style="max-width: 800px;">
+
+        <div class="ui huge header">Consentimiento de uso de datos</div>
+
+        <div class="ui raised segment">
+
+            <div class="ui positive message">
+                <div class="header">
+                    Necesitamos tu consentimiento para registrar los datos extraídos de tu certificado
+                    y tu correo electrónico, para poder continuar el proceso de registro.<br>
+                    Si no consientes, el proceso de registro se cancelará y no guardaremos esos datos.
                 </div>
-            </h1>
-            <div class="ui warning message">
-                <p>
-                    The application <strong>ISBE Onboarding</strong> is requesting access to your certificate
-                    information.<br>
-                    If you grant access, this is the information that we will send to the application.
-                </p>
             </div>
+
+            <div class="ui divider"></div>
 
             <div class="ui teal segment">
 
                 {{ if .subject.OrganizationIdentifier }}
-                <h3 class="ui header"><i class="building icon"></i>Organization Certificate Details</h3>
+                <h3 class="ui header"><i class="building icon"></i>Datos del certificado organizativo</h3>
                 {{ else }}
-                <h3 class="ui header"><i class="user icon"></i>Personal Certificate Details</h3>
+                <h3 class="ui header"><i class="user icon"></i>Datos del certificado personal</h3>
                 {{ end }}
 
                 <div class="ui list">
 
                     {{ if .subject.OrganizationIdentifier }}
-                    <div class="item"><strong>Organization Identifier:</strong> {{ .subject.OrganizationIdentifier }}</div>
+                    <div class="item"><strong>Identificador de la organización:</strong> {{ .subject.OrganizationIdentifier }}</div>
                     {{ end }}
 
                     {{ if .subject.Organization }}
-                    <div class="item"><strong>Organization:</strong> {{ .subject.Organization }}</div>
+                    <div class="item"><strong>Organización:</strong> {{ .subject.Organization }}</div>
                     {{ end }}
 
                     {{ if .subject.OrganizationalUnit }}
-                    <div class="item"><strong>Organizational Unit:</strong> {{ .subject.OrganizationalUnit }}</div>
+                    <div class="item"><strong>Unidad organizativa:</strong> {{ .subject.OrganizationalUnit }}</div>
                     {{ end }}
 
                     {{ if .subject.Country }}
-                    <div class="item"><strong>Country:</strong> {{ .subject.Country }}</div>
+                    <div class="item"><strong>País:</strong> {{ .subject.Country }}</div>
                     {{ end }}
 
-
                     {{ if .subject.CommonName }}
-                    <div class="item"><strong>Common Name:</strong> {{ .subject.CommonName }}</div>
+                    <div class="item"><strong>Nombre común:</strong> {{ .subject.CommonName }}</div>
                     {{ end }}
 
                     {{ if .subject.SerialNumber }}
-                    <div class="item"><strong>Serial Number:</strong> {{ .subject.SerialNumber }}</div>
+                    <div class="item"><strong>Número de serie:</strong> {{ .subject.SerialNumber }}</div>
                     {{ end }}
-
 
                     {{ if .subject.EmailAddress }}
                     <div class="item"><strong>Email:</strong> {{ .subject.EmailAddress }}</div>
                     {{ end }}
 
-
                     {{ if .subject.Locality }}
-                    <div class="item"><strong>Locality:</strong> {{ .subject.Locality }}</div>
+                    <div class="item"><strong>Localidad:</strong> {{ .subject.Locality }}</div>
                     {{ end }}
 
                     {{ if .subject.Province }}
-                    <div class="item"><strong>Province:</strong> {{ .subject.Province }}</div>
+                    <div class="item"><strong>Provincia:</strong> {{ .subject.Province }}</div>
                     {{ end }}
 
                     {{ if .subject.StreetAddress }}
-                    <div class="item"><strong>Street Address:</strong> {{ .subject.StreetAddress }}</div>
+                    <div class="item"><strong>Calle:</strong> {{ .subject.StreetAddress }}</div>
                     {{ end }}
 
                     {{ if .subject.PostalCode }}
-                    <div class="item"><strong>Postal Code:</strong> {{ .subject.PostalCode }}</div>
+                    <div class="item"><strong>Código postal:</strong> {{ .subject.PostalCode }}</div>
                     {{ end }}
+                    
                 </div>
             </div>
 
@@ -88,9 +83,9 @@
             <div class="ui yellow icon message">
                 <i class="exclamation triangle icon"></i>
                 <div class="content">
-                    <div class="header">Warning</div>
-                    This is a personal certificate (does not contain organization identifier).
-                    The relying party may have specific requirements for organizational certificates.
+                    <div class="header">Atención</div>
+                    Este es un certificado personal (no contiene información de una organización).
+                    Lo aceptamos solo para pruebas y no podemos usarlo para registrar una organización.
                 </div>
             </div>
             {{ end }}
@@ -98,23 +93,25 @@
             <div class="ui divider"></div>
 
             <div class="ui blue segment">
-                <h3 class="ui header"><i class="envelope icon"></i>Verified Email Address</h3>
+                <h3 class="ui header"><i class="envelope icon"></i>Correo verificado</h3>
                 <div class="ui list">
                     <div class="item"><strong>Email:</strong> {{ .email }}</div>
                 </div>
-                <p><em>This email address has been verified and will be included in the authentication data.</em></p>
+                <p><em>
+                    Este correo electrónico ha sido verificado y lo incluiremos en el registro.
+                </em></p>
             </div>
 
             <div class="ui divider"></div>
             <div class="ui segment">
-                <p>Do you want to proceed with the authentication?</p>
-                <div class="ui two buttons">
-                    <button id="grant-button" class="ui green button">
-                        <i class="check icon"></i> Grant Access
+                <p>¿Quieres continuar con el registro?</p>
+                <div class="ui two spaced buttons">
+                    <button id="grant-button" class="ui large black circular button">
+                        <i class="check icon"></i> Consentir
                     </button>
-                    <a class="ui red button"
+                    <a class="ui large red circular button"
                         href="{{ .authCodeObj.RedirectURI }}?error=access_denied&state={{ .authCodeObj.State }}">
-                        <i class="times circle icon"></i> Deny Access
+                        <i class="times circle icon"></i> Cancelar
                     </a>
                 </div>
             </div>
