--- a/internal/certauth/views/wallet_login.hbs
+++ b/internal/certauth/views/wallet_login.hbs
@@ -1,94 +1,107 @@
-<!DOCTYPE html>
-<html lang="en">
+{{template "partials/preamble"}}
 
-<head>
-    <meta charset="utf-8" />
-    <link href="/static/css/w3css.css" rel="stylesheet">
-    <!-- <link href="/static/css/mystyle.css" rel="stylesheet"> -->
-    <link href="/static/css/prism.css" rel="stylesheet">
+<body>
+   {{template "partials/logobar"}}
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#919597">
-    <title>Credential Verifier</title>
+   <div class="ui hidden divider"></div>
 
-</head>
+   <div class="ui container">
 
-<body class="w3-half-centered">
+      <div class="ui huge header">Entrar con una Credential Verificable</div>
+      <p>
+         Puedes usar dos métodos para entrar en ISBE. Elige el más adecuado a tus necesidades.
+      </p>
 
-<div class="w3-content">
-   <div class="w3-container w3-margin-bottom w3-center w3-border w3-large w3-verifier">
-      <h2 class="">Credential Verifier</h2>
-   </div>
 
-   <p class="w3-large">
-      This is the component that talks to the Wallet to receive the Verifiable Credential and hides the
-      complexity from the application.
-   </p>
-   <p class="w3-large">
-      The Verifier appears to the application as a normal Identity Provider like Google, Facebook, Microsoft,
-      etc.
-   </p>
-
-   <div class="w3-row">
-      <div class="w3-container w3-margin-bottom w3-half">
-         <div class="w3-card">
-            <div class="w3-container w3-padding-16 w3-center">
-               <h3>Scan this QR code to authenticate with a mobile</h3>
-
-               <img src="data:{{.QRcode}}" alt="QRcode" />
-            </div>
-         </div>
-      </div>
-
-      <div class="w3-container w3-margin-bottom w3-half">
-         <div class="w3-card">
-            <div class="w3-container w3-padding-16 w3-center">
-               <h3>Or click this button to authenticate with the browser</h3>
-
-               <div class="w3-container w3-padding-16">
-                  <button
-                     onclick="window.open({{.Samedevice}}, '_blank', 'width=600,height=800,scrollbars=yes,resizable=yes' )"
-                     class="w3-btn w3-verifier"
-                  >
-                     Login with browser
-                  </button>
+      <div class="ui stackable two column grid">
+         <div class="column">
+            <div class="ui raised segment">
+               <h3 class="ui center aligned header">
+                  Usar un EUDI Wallet en tu móvil
+               </h3>
+               <div class="ui warning message">
+                  <div class="header">
+                     ATENCIÓN: Debes usar la aplicación de Wallet, no la cámara del móvil.
+                  </div>
                </div>
+
+               <img class="ui centered  image" src="data:{{.QRcode}}">
+
+               <div class="ui divider"></div>
+
+               <p>Este código QR es especial y solo lo entienden Wallets compatibles con el estándar EUDI Wallet.
+               </p>
+               <p>
+                  Si escaneas el QR con la cámara de tu móvil o con cualquier otra aplicación no compatible con el
+                  estándar
+                  Europeo de Identidad Digital, no lo entenderá y no podrás entrar en ISBE.
+               </p>
+
+
             </div>
          </div>
+         <div class="column">
+            <div class="ui raused segment">
+               <h3 class="ui center aligned header">
+                  Usar el Wallet en esta máquina
+               </h3>
+
+               <div class="ui basic fitted center aligned segment">
+                  <div class="credential ui large black submit circular button"
+                     onclick="window.open({{.Samedevice}}, '_blank', 'width=600,height=800,scrollbars=yes,resizable=yes' )">
+                     Entrar
+                  </div>
+               </div>
+
+               <div class="ui divider"></div>
+
+               <p>Si lo deseas, puedes usar un Wallet especial y muy sencillo de usar en esta misma máquina.
+               </p>
+               <p>No necesitas instalar nada, pero por supuesto, debes haber recibido una Credencial Verificable
+                  generada por
+                  un representante legal de tu organización, autorizándote a poder realizar determinadas operaciones en
+                  ISBE.
+               </p>
+
+
+            </div>
+         </div>
+
       </div>
+
+      <script>
+         // Schedule a poll to the server each second, until either an error or success is received
+         setTimeout(pollServer, 2000);
+
+         async function pollServer(a) {
+            // There will be an HTTP 302 Redirection after this
+            // We will receive the url to invoke as a result from the POST
+            let resp = await fetch("/wallet/poll?state={{.AuthRequestID}}", {
+               cache: "no-cache",
+               mode: "no-cors",
+               redirect: "manual",
+            });
+            if (resp.ok) {
+               const data = await resp.text();
+               if (data === "pending") {
+                  // Poll again in 1 second
+                  console.log("pending");
+                  setTimeout(pollServer, 1000);
+                  return;
+               }
+            } else {
+               if (resp.type == "opaqueredirect") {
+                  var redirectedURL = resp.url;
+                  console.log(redirectedURL);
+                  location = redirectedURL;
+               }
+            }
+         }
+      </script>
+
+      <script src="/static/js/prism.js"></script>
+
    </div>
-</div>
-
-<script>
-   // Schedule a poll to the server each second, until either an error or success is received
-   setTimeout(pollServer, 2000);
-
-   async function pollServer(a) {
-      // There will be an HTTP 302 Redirection after this
-      // We will receive the url to invoke as a result from the POST
-      let resp = await fetch("/wallet/poll?state={{.AuthRequestID}}", {
-         cache: "no-cache",
-         mode: "no-cors",
-         redirect: "manual",
-      });
-      if (resp.ok) {
-         const data = await resp.text();
-         if (data === "pending") {
-            // Poll again in 1 second
-            console.log("pending");
-            setTimeout(pollServer, 1000);
-            return;
-         }
-      } else {
-         if (resp.type == "opaqueredirect") {
-            var redirectedURL = resp.url;
-            console.log(redirectedURL);
-            location = redirectedURL;
-         }
-      }
-   }
-</script>
-
-<script src="/static/js/prism.js"></script>
 </body>
+
 </html>
