fix hardcoded address of certauth

--- a/internal/certauth/views/wallet_login copy.hbs
+++ b/internal/certauth/views/wallet_login copy.hbs
@@ -47,10 +47,10 @@
                </h3>
 
                <div class="ui basic fitted center aligned segment">
-                  <a class="credential ui large black submit circular button"
-                     href="{{.Samedevice}}" target="">
+                  <div class="credential ui large black submit circular button"
+                     onclick="window.open({{.Samedevice}}, '_blank', 'width=600,height=800,scrollbars=yes,resizable=yes' )">
                      Entrar
-                  </a>
+                  </div>
                </div>
 
                <div class="ui divider"></div>
