several fixes and logobar

--- a/internal/certauth/views/4_request_certificate_consent.hbs
+++ b/internal/certauth/views/4_request_certificate_consent.hbs
@@ -1,6 +1,5 @@
 {{template "partials/preamble"}}
 
-<body>
     {{template "partials/logobar"}}
 
     <div class="ui hidden divider"></div>
@@ -9,7 +8,7 @@
 
         <div class="ui huge header">Consentimiento de uso de datos</div>
 
-        <div class="ui raised segment">
+        <div class="ui raised segment" style="border-radius:1rem">
 
             <div class="ui positive message">
                 <div class="header">
@@ -145,6 +144,5 @@
             });
         });
     </script>
-</body>
 
-</html>    
+{{template "partials/postamble"}}
