--- a/internal/certauth/views/error.hbs
+++ b/internal/certauth/views/error.hbs
@@ -1,6 +1,5 @@
 {{template "partials/preamble"}}
 
-<body>
     {{template "partials/logobar"}}
 
     <div class="ui hidden divider"></div>
@@ -13,6 +12,4 @@
 
     </div>
 
-</body>
-
-</html>
+{{template "partials/postamble"}}
