--- a/internal/certauth/views/login.hbs
+++ b/internal/certauth/views/login.hbs
@@ -1,6 +1,5 @@
 {{template "partials/preamble"}}
 
-<body>
    {{template "partials/logobar"}}
 
    <div class="ui hidden divider"></div>
@@ -14,7 +13,7 @@
 
       <div class="ui stackable two column grid">
          <div class="column">
-            <div class="ui raised segment">
+            <div class="ui raised segment" style="border-radius:1rem">
                <h3 class="ui center aligned header">
                   Con un certificado de representación
                </h3>
@@ -37,7 +36,7 @@
             </div>
          </div>
          <div class="column">
-            <div class="ui raused segment">
+            <div class="ui raused segment" style="border-radius:1rem">
                <h3 class="ui center aligned header">
                   Con una Credencial Verificable
                </h3>
@@ -68,6 +67,4 @@
 
    </div>
 
-</body>
-
-</html>
+{{template "partials/postamble"}}
