--- a/internal/certauth/views/partials/preamble.hbs
+++ b/internal/certauth/views/partials/preamble.hbs
@@ -14,4 +14,4 @@
     <script src="/static/semantic.js"></script>
 
 </head>
-
+<body style="background-image: url('/static/images/isbe_background.png')">
