--- a/internal/certauth/views/register.hbs
+++ b/internal/certauth/views/register.hbs
@@ -1,6 +1,5 @@
 {{template "partials/preamble"}}
 
-<body>
    {{template "partials/logobar"}}
 
    <div class="ui hidden divider"></div>
@@ -41,6 +40,4 @@
 
    </div>
 
-</body>
-
-</html>
+{{template "partials/postamble"}}
