--- a/internal/certauth/views/registration.hbs
+++ b/internal/certauth/views/registration.hbs
@@ -1,6 +1,5 @@
 {{template "partials/preamble"}}
 
-<body>
    {{template "partials/logobar"}}
 
    <div class="ui hidden divider"></div>
@@ -65,6 +64,4 @@
 
    </div>
 
-</body>
-
-</html>
+{{template "partials/postamble"}}
