--- a/internal/certauth/views/wallet_login copy.hbs
+++ b/internal/certauth/views/wallet_login copy.hbs
@@ -1,6 +1,5 @@
 {{template "partials/preamble"}}
 
-<body>
    {{template "partials/logobar"}}
 
    <div class="ui hidden divider"></div>
@@ -102,6 +101,5 @@
       <script src="/static/js/prism.js"></script>
 
    </div>
-</body>
 
-</html>
+{{template "partials/postamble"}}
