--- a/internal/onboard/views/partials/preamble.hbs
+++ b/internal/onboard/views/partials/preamble.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <!-- Standard Meta -->
@@ -14,3 +14,4 @@
     <script src="/static/semantic.js"></script>
 
 </head>
+<body style="background-image: url('/static/images/isbe_background.png')">
