--- a/internal/onboard/views/welcome.hbs
+++ b/internal/onboard/views/welcome.hbs
@@ -1,6 +1,5 @@
 {{template "partials/preamble"}}
 
-<body>
     {{template "partials/logobar" "logout_button"}}
 
     <div class="ui hidden divider"></div>
@@ -61,7 +60,7 @@
 
         <div class="ui grid">
             <a class="eight wide column" href="https://isbecatalog.netlify.app">
-                <div class="ui raised segment" style="background-color:#ff7e5680;" >
+                <div class="ui raised segment" style="border-radius:1rem" >
                     <h4 class="ui header">Catálogo ISBE</h4>
                     <p style="color:black">El Catálogo ISBE es un catálogo de servicios digitales basados en Blockchain y que están disponibles en las redes ISBE.</p>
                 </div>
@@ -71,5 +70,5 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.js"></script>
-</body>
+
 {{template "partials/postamble"}}
