--- a/internal/certauth/views/1_certificate_select.hbs
+++ b/internal/certauth/views/1_certificate_select.hbs
@@ -1,6 +1,5 @@
 {{template "partials/preamble"}}
 
-<body>
     {{template "partials/logobar"}}
 
     <div class="ui hidden divider"></div>
@@ -9,7 +8,7 @@
 
         <div class="ui huge header">Entrar con un certificado de representación</div>
 
-        <div class="ui raised segment">
+        <div class="ui raised segment" style="border-radius:1rem">
 
             <div class="ui warning message">
                 <div class="header">
@@ -46,6 +45,5 @@
         </div>
 
     </div>
-</body>
 
-</html>
+{{template "partials/postamble"}}
