--- a/internal/certauth/views/2_certificate_received.hbs
+++ b/internal/certauth/views/2_certificate_received.hbs
@@ -1,6 +1,5 @@
 {{template "partials/preamble"}}
 
-<body>
     {{template "partials/logobar"}}
 
     <div class="ui hidden divider"></div>
@@ -9,7 +8,7 @@
 
         <div class="ui huge header">Certificado recibido</div>
 
-        <div class="ui raised segment">
+        <div class="ui raised segment" style="border-radius:1rem">
 
             <div class="ui positive message">
                 <div class="header">
@@ -116,6 +115,4 @@
 
     </div>
 
-</body>
-
-</html>
+{{template "partials/postamble"}}
