--- a/internal/certauth/views/3_confirm_email.hbs
+++ b/internal/certauth/views/3_confirm_email.hbs
@@ -1,6 +1,5 @@
 {{template "partials/preamble"}}
 
-<body>
     {{template "partials/logobar"}}
 
     <div class="ui hidden divider"></div>
@@ -9,7 +8,7 @@
 
         <div class="ui huge header">Confirmación del correo electrónico</div>
 
-        <div class="ui raised segment">
+        <div class="ui raised segment" style="border-radius:1rem">
 
             <div class="ui positive message">
                 <div class="header">
@@ -138,6 +137,4 @@
         </div>
     </div>
 
-</body>
-
-</html>
+{{template "partials/postamble"}}
