fix some colors and the link to ISBE

--- a/internal/certauth/views/partials/logobar.hbs
+++ b/internal/certauth/views/partials/logobar.hbs
@@ -143,8 +143,10 @@
 
     <!-- 1. Company Logo (Left Side) -->
     <div class="company-logo">
+        <a href="https://redisbe.com">
         <img src="/static/images/isbe_logo_image.svg" alt="nextgeneration" width="220" height="53" loading="lazy" />
         <img src="/static/images/isbe_logo_text.svg" alt="nextgeneration" width="220" height="53" loading="lazy" />
+        </a>
     </div>
 
     <div class="center-group">
