--- a/internal/certauth/views/admin_upstream.hbs
+++ b/internal/certauth/views/admin_upstream.hbs
@@ -1,3 +1,5 @@
+{{template "partials/preamble"}}
+
 {{template "partials/header" "upstream"}}
 
 <div style="width: 99%; margin: auto; padding: 10px">
@@ -51,3 +53,5 @@
 
    });
 </script>
+
+{{template "partials/postamble"}}
