--- a/internal/certauth/views/partials/preamble.hbs
+++ b/internal/certauth/views/partials/preamble.hbs
@@ -1,3 +1,4 @@
+{{define "preamble"}}
 <!DOCTYPE html>
 <html>
 
@@ -14,4 +15,6 @@
     <script src="/static/semantic.js"></script>
 
 </head>
+
 <body style="background-image: url('/static/images/isbe_background.png')">
+    {{end}}
